<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree apps</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Football Scores</string>
    <string name="library_app">Library</string>
    <string name="build_it_together">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="launch_msg">This button will launch my %s app!</string>
</resources>
